WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286007
REGRESSION (
285237@main
): khanacademy.org: Live Text selection is misplaced in fullscreen video on iPad
https://bugs.webkit.org/show_bug.cgi?id=286007
Summary
REGRESSION (285237@main): khanacademy.org: Live Text selection is misplaced i...
Wenson Hsieh
Reported
2025-01-15 09:39:04 PST
rdar://142822957
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-01-15 10:09:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39088
EWS
Comment 2
2025-01-15 13:22:25 PST
Committed
288963@main
(d7b5c032766f): <
https://commits.webkit.org/288963@main
> Reviewed commits have been landed. Closing PR #39088 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug